# SC2AutoObserver

./: .gitignore  .gitmodules  CMakeLists.txt  CameraModule.cpp  CameraModule.h  LICENSE  README.md
Examples/ExampleObserver/: ExampleObserver.sln  README.md
Examples/ExampleObserver/ExampleObserver/: ExampleObserver.cpp  ExampleObserver.vcxproj
src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  CameraModule.cpp  CameraModule.h  Observer.cpp  Timer.hpp  Tools.h  ToolsCommon.cpp  ToolsUnix.cpp  ToolsWindows.cpp  main.cpp
test/: ArgParser.test.cpp  CMakeLists.txt  ExampleReplayInterloperBotScreenMovement.SC2Replay
